hphp/hack/test/typecheck/void_is_type_of_null/option_awaitable.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

async function test(bool $b, Awaitable<int> $a): Awaitable<int> {
  return await $b ? $a : null;
}
